# rust-inventory-processor

./: Cargo.toml  README.md  WASM_BUILD_GUIDE.md
native/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  rust_inventory_processor_native.darwin-arm64.node  rust_inventory_processor_native.node
native/src/: lib.rs
src/: lib.rs  process_inventory_list.rs  wasm.rs
